fix: gap styles were changed

--- a/app/components/token-info/styles.module.scss
+++ b/app/components/token-info/styles.module.scss
@@ -7,7 +7,7 @@
 
   @include responsive {
     flex-direction: column;
-    gap: 12px;
+    gap: 8px;
   }
 }
 
