--- a/app/components/trade-block/styles.module.scss
+++ b/app/components/trade-block/styles.module.scss
@@ -5,7 +5,7 @@
 .trade-block {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 8px;
 }
 
 .title {
