--- a/app/ui-components/modal/styles.module.scss
+++ b/app/ui-components/modal/styles.module.scss
@@ -19,8 +19,7 @@
   }
 
   @include responsive {
-    max-height: 100vh;
-    height: 100%;
+    min-height: 100vh;
     padding: 12px 24px;
   }
 }
